fix: products are aligned to the left in a row

--- a/react-test-project/src/components/product-cards-container/product-card-container.scss
+++ b/react-test-project/src/components/product-cards-container/product-card-container.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   gap: 103px 40px;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   padding-top: 79px;
 }
